Syncing changes from private repository

--- a/Runtime/AmazonPublisherServices/Chartboost.Mediation.AmazonPublisherServices.asmdef
+++ b/Runtime/AmazonPublisherServices/Chartboost.Mediation.AmazonPublisherServices.asmdef
@@ -2,7 +2,10 @@
     "name": "Chartboost.Mediation.AmazonPublisherServices",
     "rootNamespace": "Chartboost.Mediation.AmazonPublisherServices",
     "references": [
-        "Chartboost.Threading"
+        "Chartboost.Threading",
+        "Chartboost.Logging",
+        "Chartboost.Utilities",
+        "Chartboost.Mediation"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
