--- a/Chartboost.CSharp.Mediation.Unity.Adapter.AmazonPublisherServices.nuspec
+++ b/Chartboost.CSharp.Mediation.Unity.Adapter.AmazonPublisherServices.nuspec
@@ -2,21 +2,22 @@
 <package>
   <metadata>
     <id>Chartboost.CSharp.Mediation.Unity.Adapter.AmazonPublisherServices</id>
-    <version>4.0.1</version>
-    <title>Chartboost Mediation - Amazon Publisher Services Adapter</title>
-    <description>The Chartboost Mediation Unity SDK Amazon Publisher Services Ad Adapter.</description>
+    <version>5.0.0</version>
+    <title>Chartboost Mediation Adapter - Amazon Publisher Services Adapter</title>
+    <description>The Chartboost Mediation Unity SDK Ad Adapter for Amazon Publisher Services.</description>
     <authors>Chartboost</authors>
     <owners>Chartboost</owners>
     <license type="file">LICENSE.md</license>
     <readme>README.md</readme>
     <projectUrl>https://www.chartboost.com/mediate</projectUrl>
     <copyright>Copyright 2024</copyright>
-    <tags>Chartboost, Ads, Mediation, Unity, AmazonPublisherServices, Adapter,cs</tags>
+    <tags>Chartboost, Ads, Mediation, Unity, Adapter, AmazonPublisherServices, cs</tags>
     <repository type="git" url="https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services"/>
     <dependencies>
-      <dependency id="Chartboost.CSharp.Mediation.Unity" version="4.9.0" />
-      <dependency id="Chartboost.CSharp.Threading.Unity" version="1.0.0" />
-      <dependency id="Chartboost.CSharp.Utilities.Unity" version="1.0.0" />
+      <dependency id="Chartboost.CSharp.Mediation.Unity" version="5.0.0" />
+      <dependency id="Chartboost.CSharp.Threading.Unity" version="1.0.1" />
+      <dependency id="Chartboost.CSharp.Utilities.Unity" version="1.0.1" />
+      <dependency id="Chartboost.CSharp.Logging.Unity" version="1.0.0" />
     </dependencies>
   </metadata>
 </package>
