--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "com.chartboost.mediation.unity.aps",
-  "version": "4.0.1",
-  "displayName": "Chartboost Mediation - Amazon Publisher Services Adapter",
-  "description": "The Chartboost Mediation Unity SDK Amazon Publisher Services Ad Adapter.",
-  "unity": "2020.3",
-  "unityRelease": "27f1",
+  "name": "com.chartboost.mediation.unity.adapter.amazon-publisher-services",
+  "version": "5.0.0",
+  "displayName": "Chartboost Mediation Adapter - Amazon Publisher Services",
+  "description": "The Chartboost Mediation Unity SDK Ad Adapter for Amazon Publisher Services.",
+  "unity": "2022.3",
   "documentationUrl": "https://developers.chartboost.com/docs/mediation-unity-get-started",
   "changelogUrl": "https://developers.chartboost.com/docs/mediation-unity-changelog",
   "licensesUrl": "https://answers.chartboost.com/child_article/legal",
   "dependencies": {
-    "com.chartboost.unity.threading": "1.0.0",
-    "com.chartboost.unity.utilities": "1.0.0"
+    "com.chartboost.mediation" : "5.0.0",
+    "com.chartboost.unity.threading": "1.0.1",
+    "com.chartboost.unity.utilities": "1.0.1",
+    "com.chartboost.unity.logging": "1.0.0"
   },
-  "keywords": [],
+  "keywords": ["Chartboost", "Mediation", "Adapter", "Unity", "Amazon Publisher Services"],
   "author": {
     "name": "Chartboost",
     "email": "sales@chartboost.com",
     "url": "https://www.chartboost.com/mediate"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services.git"
+  },
+  "bugs": {
+      "url": "https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services/issues",
+      "email": "helium-service@chartboost.com"
   },
   "hideInEditor": false
 }
