--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "com.chartboost.mediation.unity.adapter.amazon-publisher-services",
-  "version": "5.0.1",
-  "displayName": "Chartboost Mediation Adapter - Amazon Publisher Services",
-  "description": "The Chartboost Mediation Unity SDK Ad Adapter for Amazon Publisher Services.",
-  "unity": "2022.3",
-  "documentationUrl": "https://developers.chartboost.com/docs/mediation-unity-get-started",
-  "changelogUrl": "https://developers.chartboost.com/docs/mediation-unity-changelog",
-  "licensesUrl": "https://answers.chartboost.com/child_article/legal",
-  "dependencies": {
-    "com.chartboost.mediation" : "5.0.0",
-    "com.chartboost.unity.threading": "1.0.1",
-    "com.chartboost.unity.utilities": "1.0.1",
-    "com.chartboost.unity.logging": "1.0.0"
-  },
-  "keywords": ["Chartboost", "Mediation", "Adapter", "Unity", "Amazon Publisher Services"],
-  "author": {
-    "name": "Chartboost",
-    "email": "sales@chartboost.com",
-    "url": "https://www.chartboost.com/mediate"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services.git"
-  },
-  "bugs": {
-      "url": "https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services/issues",
-      "email": "helium-service@chartboost.com"
-  },
-  "hideInEditor": false
+    "name": "com.chartboost.mediation.unity.adapter.amazon-publisher-services",
+	"version": "5.1.0",
+    "license": "MIT",
+    "displayName": "Chartboost Mediation Adapter - Amazon Publisher Services",
+    "description": "The Chartboost Mediation Unity SDK Ad Adapter for Amazon Publisher Services.",
+    "unity": "2022.3",
+    "documentationUrl": "https://developers.chartboost.com/docs/mediation-unity-get-started",
+    "changelogUrl": "https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services/blob/main/CHANGELOG.md",
+    "licensesUrl": "https://answers.chartboost.com/child_article/legal",
+    "dependencies": {
+        "com.chartboost.mediation": "5.0.0",
+        "com.chartboost.unity.threading": "1.0.1",
+        "com.chartboost.unity.utilities": "1.0.1",
+        "com.chartboost.unity.logging": "1.0.0"
+    },
+    "keywords": [
+        "Chartboost",
+        "Mediation",
+        "Adapter",
+        "Unity",
+        "Amazon Publisher Services"
+    ],
+    "homepage": "https://chartboost.com",
+    "author": {
+        "name": "Chartboost",
+        "email": "sales@chartboost.com",
+        "url": "https://www.chartboost.com/mediate"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services.git"
+    },
+    "bugs": {
+        "url": "https://github.com/ChartBoost/chartboost-mediation-unity-adapter-amazon-publisher-services/issues",
+        "email": "helium-service@chartboost.com"
+    },
+    "hideInEditor": false
 }
